# spacevlbi

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
.spyproject/config/: workspace.ini
.spyproject/config/backups/: workspace.ini.bak
Examples/: ExampleSetup.py  ExampleSpaceTelescope.py
docs/: Makefile  requirements.txt
docs/source/: Attitude.rst  Constraints.rst  Figures.rst  Guide  Guide.rst  Observation.rst  Optimisation.rst  Orbit.rst  Station.rst  TimeLoop.rst  api.rst  conf.py  index.rst  usage.rst
spacevlbi/: Attitude.py  Constraints.py  Figures.py  Observation.py  Optimisation.py  Orbit.py  Station.py  TimeLoop.py  __init__.py
