[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = ["astropy >= 5.3.4", "numpy >= 1.26.4", "poliastro >= 0.17", "matplotlib >= 3.9.1"]
name = "spacevlbi"
version = "1.1.5"
authors = [
  { name="Ben Hudson", email="benhudson@tudelft.nl" },
]
description = "Python package to simulate and optimise space-based VLBI missions"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Astronomy, VLBI, Space Mission Simulation, Mission Optimisation"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bhudson2/spacevlbi"
